# agent-volatile

./: .gitignore  main.py  pyproject.toml
.claude/: settings.local.json
src/research_agent/config/: __init__.py  settings.py
src/research_agent/core/: __init__.py  events.py  exceptions.py  state.py
src/research_agent/graph/: checkpointer.py  nodes.py
src/research_agent/tools/: base.py  calculator.py  registry.py
src/research_agent/tools/web/: __init__.py  fetch.py  search.py
