[project]
name = "research-agent-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "psycopg[binary,pool]>=3.2.0",  # DATABASE (for PostgreSQL checkpointer)
    "tenacity>=9.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",    
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.34.0",       # Mock httpx requests
    
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    
    # Dev tools
    "ipython>=8.29.0",
]

[project.scripts]
research-agent = "research_agent.__main__:cli"
research-agent-server = "research_agent.api:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends.standard"

# Source layout: src/research_agent/
[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "RUF",
]
ignore = [
    "E501",   # Line too long
    "B008",   # Function call in default argument (needed for Depends())
]

# RUFF

[tool.ruff.lint.isort]
known-first-party = ["research_agent"]
[tool.ruff.lint]
ignore = ["W293"]


# PYTEST

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]


# MYPY - Type Checking

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mcp.*", "bs4.*", "lxml.*"]
ignore_missing_imports = true
